# Australia-property-boundary-v.3

./: .gitignore  README.md
boundary-viewer/: .vercelignore  PMTILES_HOSTING.md  PROPERTY_VALUE_API_GUIDE.md  QUICK_PMTILES_SETUP.md  README.md  deploy-vercel.md  deploy.sh  iframe-example.html  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
boundary-viewer/api/: elevation.ts  enrich.ts  insight.ts
boundary-viewer/src/: App.tsx  ElevationChart.tsx  ElevationProfile.tsx  Search.tsx  index.css  main.tsx
boundary-viewer/src/components/: Sidebar.tsx  SubscriptionModal.tsx  UsageTracker.tsx
boundary-viewer/src/components/ui/: ParcelInfoPanel.tsx  ai-features.tsx  ai-insight-dashboard.tsx  ai-property-analysis.tsx  collaboration-features.tsx  enhanced-button.tsx  enhanced-card.tsx  enhanced-elevation-chart.tsx  enhanced-search.tsx  enhanced-sidebar.tsx  floorplan-3d-modal.tsx  map-components.tsx  market-prediction.tsx  measurement-tools.tsx  property-analytics.tsx  sidebar.tsx  switch.tsx  theme-toggle.tsx
boundary-viewer/src/config/: api-config.ts
boundary-viewer/src/contexts/: SubscriptionContext.tsx
boundary-viewer/src/services/: property-value-api.ts  property-value-estimator.ts
boundary-viewer/src/styles/: enhanced-ui.css
boundary-viewer/supabase/functions/qld-elevation/: index.ts  supabase.toml
doc/: Makefile  README.md  main.tex  propboundary_book.sty
doc/chapters/: introduction.tex  references.tex  software.tex  tests.tex
doc/header/: authorpage.tex  titlepage.tex
doc/references/: github.bib
prediction/: main.py
server/: .gitignore  CMakeLists.txt  Dockerfile
server/build-wsl/: boundary  my_test
server/include/: AABB.hpp  cam.hpp  global.hpp  node.hpp  pmtiles.hpp  pmtiles_reader.hpp  read.hpp  reader.h  thread.hpp
server/src/: cam.cpp  http_server.cpp  httpreq.cpp  main.cpp  node.cpp  pmtiles_reader.cpp  reader.cpp
server/tests/: test.cpp
